
syntax = "proto3";

package command;

// command between dart <-> rust
// 启动rust的服务
message Start {

}

// 停止rust的服务
message Stop {
    
}

// 
message RequestToReceive {
    string file_name=1;
    string from = 2;
}

message SendFile {
    string path=1;
    string addr=2;
}

message Resp {
    int32 code = 1;
    string msg = 2;
}

// 
message StartToReceive{

}
//
message Event {
    oneof eventEnum {
        Start start = 1;
        Stop stop = 2;
        RequestToReceive request_to_receive = 3;
        SendFile send_file = 4;
        StartToReceive start_receive=5;
    }
}




// 上传文件,rust层之间通信
message UploadFileRequest {
    oneof uploadFileEnum {
        FileMetaData MetaData = 1;
        bytes Content = 2;
    }

}

message FileMetaData {
    string FileName = 1;
    int32 fileSize =2;
    string md5=3;
}


service ShareFile {
    rpc UploadFile(stream UploadFileRequest) returns (stream Resp);
}